--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,18 @@
 $black: #2B2B2B;
+
+$darkgray: lighten($black, 10%);
+$overlayblack: transparentize($black, 0.5);
+
 $white: #F5F5F5;
-$accent: #1B9CFC;
+
+$midgray: darken($white, 10%);
+$lightgray: darken($white, 5%);
+
+
+$accent: #d23b3b;
+
+$darkaccent: darken($accent, 10%);
+$lightaccent: lighten($accent, 10%);
+
+
+$border-radius: 10px;
