--- a/src/style/vue-quill.snow.scss
+++ b/src/style/vue-quill.snow.scss
@@ -1,10 +1,11 @@
 .ql-container {
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 13px;
     height: 100%;
     margin: 0px;
     position: relative;
+    border-radius: 10px;
 }
 .ql-container.ql-disabled .ql-tooltip {
     visibility: hidden;
@@ -75,7 +76,7 @@
 }
 .ql-editor ul[data-checked=true] > li::before,
 .ql-editor ul[data-checked=false] > li::before {
-    color: #777;
+    color: $darkgray;
     cursor: pointer;
     pointer-events: all;
 }
@@ -393,20 +394,44 @@
 .ql-snow .ql-toolbar:after {
     clear: both;
     content: '';
-    display: table;
+    display: none;
 }
 .ql-snow.ql-toolbar button,
 .ql-snow .ql-toolbar button {
+    background-color: $white;
+    outline: $lightgray 2px solid;
     border: none;
     cursor: pointer;
-    display: inline-block;
+    border-radius: 3px;
+    display: block;
     float: left;
-    height: 24px;
-    padding: 3px 5px;
-    width: 28px;
-    margin-left: 1px;
-    margin-right: 1px;
+    height: 28px;
+    padding: 4px 8px;
+    width: auto;
 }
+
+.ql-snow.ql-toolbar button.ql-custom,
+.ql-snow .ql-toolbar button.ql-custom {
+    height: unset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ql-snow.ql-toolbar button.primary,
+.ql-snow .ql-toolbar button.primary {
+    background-color: $accent;
+
+    * {
+        color: $white;
+    }
+}
+
+.ql-snow.ql-toolbar button.primary:hover,
+.ql-snow .ql-toolbar button.primary:hover {
+    background-color: $lightaccent;
+}
+
 .ql-snow.ql-toolbar button svg,
 .ql-snow .ql-toolbar button svg {
     float: left;
@@ -428,7 +453,7 @@
 .ql-snow .ql-toolbar .ql-picker-label:hover,
 .ql-snow.ql-toolbar .ql-picker-item:hover,
 .ql-snow .ql-toolbar .ql-picker-item:hover {
-    background-color: #f3f4f6;
+    background-color: $lightgray;
 }
 .ql-snow.ql-toolbar button.ql-active,
 .ql-snow .ql-toolbar button.ql-active,
@@ -436,8 +461,8 @@
 .ql-snow .ql-toolbar .ql-picker-label.ql-active,
 .ql-snow.ql-toolbar .ql-picker-item.ql-selected,
 .ql-snow .ql-toolbar .ql-picker-item.ql-selected {
-    background-color: red;
-    color: red;
+    background-color: $white;
+    color: $accent;
 }
 .ql-snow.ql-toolbar button.ql-active .ql-fill,
 .ql-snow .ql-toolbar button.ql-active .ql-fill,
@@ -451,7 +476,7 @@
 .ql-snow .ql-toolbar .ql-picker-label.ql-active .ql-stroke.ql-fill,
 .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke.ql-fill,
 .ql-snow .ql-toolbar .ql-picker-item.ql-selected .ql-stroke.ql-fill {
-    fill: red;
+    fill: $accent;
 }
 .ql-snow.ql-toolbar button.ql-active .ql-stroke,
 .ql-snow .ql-toolbar button.ql-active .ql-stroke,
@@ -465,24 +490,24 @@
 .ql-snow .ql-toolbar .ql-picker-label.ql-active .ql-stroke-miter,
 .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke-miter,
 .ql-snow .ql-toolbar .ql-picker-item.ql-selected .ql-stroke-miter {
-    stroke: red;
+    stroke: $accent;
 }
 @media (pointer: coarse) {
     .ql-snow.ql-toolbar button:hover:not(.ql-active),
     .ql-snow .ql-toolbar button:hover:not(.ql-active) {
-        color: #4b5563;
+        color: $darkgray;
     }
     .ql-snow.ql-toolbar button:hover:not(.ql-active) .ql-fill,
     .ql-snow .ql-toolbar button:hover:not(.ql-active) .ql-fill,
     .ql-snow.ql-toolbar button:hover:not(.ql-active) .ql-stroke.ql-fill,
     .ql-snow .ql-toolbar button:hover:not(.ql-active) .ql-stroke.ql-fill {
-        fill: #4b5563;
+        fill: $darkgray;
     }
     .ql-snow.ql-toolbar button:hover:not(.ql-active) .ql-stroke,
     .ql-snow .ql-toolbar button:hover:not(.ql-active) .ql-stroke,
     .ql-snow.ql-toolbar button:hover:not(.ql-active) .ql-stroke-miter,
     .ql-snow .ql-toolbar button:hover:not(.ql-active) .ql-stroke-miter {
-        stroke: #4b5563;
+        stroke: $darkgray;
     }
 }
 .ql-snow {
@@ -509,31 +534,40 @@
 .ql-snow .ql-tooltip.ql-flip {
     transform: translateY(-10px);
 }
+
+.ql-formats-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px 16px;
+    margin-right: 16px;
+}
+
 .ql-snow .ql-formats {
-    display: inline-block;
-    vertical-align: middle;
+    display: flex;
+    gap: 16px;
+    border-radius: 3px;
 }
 .ql-snow .ql-formats:after {
     clear: both;
     content: '';
-    display: table;
+    display: none;
 }
 .ql-snow .ql-stroke {
     fill: none;
-    stroke: #4b5563;
+    stroke: $darkgray;
     stroke-linecap: round;
     stroke-linejoin: round;
     stroke-width: 2;
 }
 .ql-snow .ql-stroke-miter {
     fill: none;
-    stroke: #4b5563;
+    stroke: $darkgray;
     stroke-miterlimit: 10;
     stroke-width: 2;
 }
 .ql-snow .ql-fill,
 .ql-snow .ql-stroke.ql-fill {
-    fill: #4b5563;
+    fill: $darkgray;
 }
 .ql-snow .ql-empty {
     fill: none;
@@ -579,14 +613,14 @@
     text-decoration: underline;
 }
 .ql-snow .ql-editor blockquote {
-    border-left: 4px solid #ccc;
+    border-left: 4px solid $midgray;
     margin-bottom: 5px;
     margin-top: 5px;
     padding-left: 16px;
 }
 .ql-snow .ql-editor code,
 .ql-snow .ql-editor pre {
-    background-color: #f0f0f0;
+    background-color: $white;
     border-radius: 3px;
 }
 .ql-snow .ql-editor pre {
@@ -600,15 +634,15 @@
     padding: 2px 4px;
 }
 .ql-snow .ql-editor pre.ql-syntax {
-    background-color: #23241f;
-    color: #f8f8f2;
+    background-color: $black;
+    color: $white;
     overflow: visible;
 }
 .ql-snow .ql-editor img {
     max-width: 100%;
 }
 .ql-snow .ql-picker {
-    color: #4b5563;
+    color: $midgray;
     display: inline-block;
     float: left;
     font-size: 14px;
@@ -633,7 +667,7 @@
     line-height: 22px;
 }
 .ql-snow .ql-picker-options {
-    background-color: #fff;
+    background-color: $white;
     display: none;
     min-width: 100%;
     position: absolute;
@@ -645,14 +679,14 @@
     padding: 5px 8px;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-label {
-    color: #d1d5db;
+    color: $midgray;
     z-index: 2;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-fill {
-    fill: #d1d5db;
+    fill: $midgray;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-stroke {
-    stroke: #d1d5db;
+    stroke: $midgray;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-options {
     display: block;
@@ -807,20 +841,20 @@
     font-size: 32px;
 }
 .ql-snow .ql-color-picker.ql-background .ql-picker-item {
-    background-color: #fff;
+    background-color: $white;
 }
 .ql-snow .ql-color-picker.ql-color .ql-picker-item {
-    background-color: #000;
+    background-color: $black;
 }
 .ql-toolbar.ql-snow {
-    border: 1px solid #d1d5db;
     box-sizing: border-box;
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    padding: 8px;
+    padding: 0;
 }
+
 .ql-toolbar.ql-snow .ql-formats {
-    margin-right: 15px;
 }
+
 .ql-toolbar.ql-snow .ql-picker-label {
     border: 1px solid transparent;
 }
@@ -829,23 +863,21 @@
     box-shadow: rgba(0,0,0,0.2) 0 2px 8px;
 }
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
-    border-color: #d1d5db;
+    border-color: $midgray;
 }
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options {
-    border-color: #d1d5db;
+    border-color: $midgray;
 }
 .ql-toolbar.ql-snow .ql-color-picker .ql-picker-item.ql-selected,
 .ql-toolbar.ql-snow .ql-color-picker .ql-picker-item:hover {
-    border-color: #000;
+    border-color: $black;
 }
-.ql-toolbar.ql-snow + .ql-container.ql-snow {
-    border-top: 0px;
-}
+
 .ql-snow .ql-tooltip {
-    background-color: #fff;
-    border: 1px solid #d1d5db;
-    box-shadow: 0px 0px 5px #d1d5db;
-    color: #4b5563;
+    background-color: $white;
+    border: 1px solid $midgray;
+    box-shadow: 0px 0px 5px $midgray;
+    color: $darkgray;
     padding: 5px 12px;
     white-space: nowrap;
 }
@@ -856,7 +888,7 @@
 }
 .ql-snow .ql-tooltip input[type=text] {
     display: none;
-    border: 1px solid #d1d5db;
+    border: 1px solid $midgray;
     font-size: 13px;
     height: 26px;
     margin: 0px;
@@ -871,7 +903,7 @@
     vertical-align: top;
 }
 .ql-snow .ql-tooltip a.ql-action::after {
-    border-right: 1px solid #d1d5db;
+    border-right: 1px solid $midgray;
     content: 'Edit';
     margin-left: 16px;
     padding-right: 8px;
@@ -905,8 +937,8 @@
     content: "Enter video:";
 }
 .ql-snow a {
-    color: #2563eb;
+    color: $accent;
 }
 .ql-container.ql-snow {
-    border: 1px solid #d1d5db;
+    border: 1px solid $midgray;
 }
